:bug: fix store toolbar overflow screen

--- a/website/src/components/Store/styles.css
+++ b/website/src/components/Store/styles.css
@@ -19,8 +19,8 @@
     }
 
     &-dropdown {
+      @apply w-36 z-10 m-0 p-2;
       @apply rounded-md bg-base-100 shadow-lg border border-base-200;
-      @apply w-36 z-10 m-0 p-2 left-1/2 -translate-x-1/2;
     }
   }
 
